--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
-body {
-    background-color: blueviolet;
+.cabecalho {
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
+    display: flex;
+} 
+
+ .cabecanho-imagem{
+     width: 20%;
 }
+
